# tripwire

./: .gitignore  BUILD_PLAN.md  CLAUDE.md  LICENSE  README.md  START_HERE.md  optimizer_integrity_bench.py  pyproject.toml
.github/workflows/: pages.yml
bench/: __init__.py  attack_suite.py  run.py
docs/: ADD_THE_PAPER.md  decisions.md  reward-hacking-experiment.md  target-authoring.md  threat-model.md
docs/assets/tapes/: demo.tape  explain.tape  hero.tape  init.tape  optimize.tape  verify-example.tape
experiment/: __init__.py  generate.py  ground_truth.py  judge.py  llm.py  run.py
runner/: __init__.py  target_zero.py  target_zero_evaluator.py  target_zero_initial.py
site/: .gitignore  package.json  vite.config.ts
site/src/: styles.css
site/src/components/: Backdrop.tsx
site/src/components/charts/: CostConvergence.tsx  FrameworkDiagram.tsx  ScheduleViability.tsx  SpeedupChart.tsx  Trajectories.tsx
site/src/data/: compilot.ts  tripwire.ts
site/src/lib/: viz.ts
site/src/routes/: __root.tsx  docs.tsx  index.tsx
tests/: __init__.py  test_attacks.py  test_bench_run.py  test_bench_scorecard.py  test_comparators.py  test_evaluator.py  test_experiment.py  test_isolation_security.py  test_measure_hardening.py  test_optimize_scaffolding.py  test_oracle_layers.py  test_scaffold_examples.py  test_scorecard.py  test_target_numeric.py  test_target_schema.py  test_target_serde.py  test_target_sql.py  test_target_sum_reduction.py  test_target_tokenizer.py
tripwire/: __init__.py  cli.py  evaluator.py  isolation.py  measure.py  optimize.py  oracle.py  scaffold.py  scorecard.py  target.py
tripwire/attacks/: __init__.py  library.py  runner.py
tripwire/examples/: __init__.py  example_target.py  fast_candidate.py  hack_candidate.py
tripwire/targets/: __init__.py  numeric.py  serde.py  sql.py  sql_fuzzer.py  sum_reduction.py  tokenizer.py
viz/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
viz/public/data/: bench.jsonl  target-zero.jsonl
viz/src/: App.tsx  index.css
viz/src/components/: Nav.tsx
viz/src/data/: parse.ts  types.ts
viz/src/lib/: util.ts
viz/src/sections/: Hero.tsx  MechanismSection.tsx  Outro.tsx  TargetZeroSection.tsx  ThesisSection.tsx
