[project]
# Distribution name on PyPI. The bare name "tripwire" is on PyPI's prohibited
# list (the trademarked security product), so we publish as "tripwire-oracle".
# The import package and the console command both stay `tripwire` (see
# [tool.setuptools] packages and [project.scripts]); only `pip install` differs.
name = "tripwire-oracle"
version = "0.1.0"
description = "A layered, adversarial-by-design correctness oracle for LLM-driven code optimization, packaged as a drop-in OpenEvolve evaluator."
readme = "README.md"
authors = [{ name = "Sammy Tourani" }]
keywords = [
    "llm",
    "code-optimization",
    "reward-hacking",
    "openevolve",
    "verification",
    "correctness-oracle",
    "metamorphic-testing",
    "differential-testing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# 3.12+: the Phase-0 seed uses 3.12 f-string syntax (nested same-quote f-strings),
# and the .venv this repo runs on is 3.12. CLAUDE.md §7 says "3.11+"; we tighten the
# real floor to 3.12 so the declared floor matches what actually parses/runs.
requires-python = ">=3.12"
dependencies = [
    "numpy",
    # The interactive CLI (`tripwire`) is the product's front door, so its two
    # render deps are core, not optional. Both are pure-Python and light, so the
    # `uvx tripwire demo` one-liner stays fast. The oracle itself imports neither.
    "rich>=13",
    "pyfiglet>=1.0",
]

[project.urls]
Homepage = "https://sammytourani.github.io/tripwire/"
Repository = "https://github.com/SammyTourani/tripwire"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
# The OpenEvolve loop is needed only by the runner script (tripwire/evaluator.py
# returns a plain dict and imports nothing from openevolve, so the core stays
# dependency-light -- see ADR-001/HARD RULE 1). Pinned to the confirmed-latest
# canonical release (algorithmicsuperintelligence/openevolve == codelion/openevolve,
# v0.2.27, the version on PyPI). Network + an LLM key required to actually run it.
runner = [
    "openevolve>=0.2.27",
]

# `tripwire` is the console entry point: bare `tripwire` opens the interactive
# menu; `tripwire demo|verify|optimize` run directly. The command stays `tripwire`
# even though the distribution is `tripwire-oracle`, so the one-liner is
# `uvx --from tripwire-oracle tripwire demo` (or `pip install tripwire-oracle`).
[project.scripts]
tripwire = "tripwire.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# cli.py and scorecard.py live inside the `tripwire` package, so they ship
# automatically with this list -- the demo no longer depends on the unpackaged
# bench/ directory.
packages = ["tripwire", "tripwire.targets"]
py-modules = ["optimizer_integrity_bench"]

[tool.ruff]
line-length = 100
target-version = "py312"
# docs/ holds a verbatim upstream OpenEvolve reference (openevolve-example-evaluator.py)
# kept for ADR-007 fidelity -- it is third-party documentation, not our source, so it
# is excluded from our lint.
extend-exclude = ["docs/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# The Phase-0 seed (optimizer_integrity_bench.py) is FROZEN (CLAUDE.md §6); its body is
# intentionally not reformatted to protect the regression baseline. We silence the
# pre-existing body-style lints there but KEEP import hygiene (F/I) enforced so a future
# orphaned import is still caught.
[tool.ruff.lint.per-file-ignores]
"optimizer_integrity_bench.py" = ["E501", "E731"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
